# alerts

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  main.py  pyproject.toml  report.json  report_v1.json  report_v2.json  report_v3.json  settings.py
src/: database.py  exceptions.py  interface.py  report_alert.py  slackapi.py  tracking_alert.py
src/domain/entities/: slack_message.py
src/domain/usecases/alerts/: micro_view.py  usecase.py
src/dominio/usecases/alerts/send/: usecase.py
src/infra/db/: database.py
src/infra/slack/: client.py  exceptions.py  message.py
src/infra/usecases/alerts/send/: gateway.py
src/infra/usecases/slack/send/: gateway.py
src/usecases/: interface.py  report_alert.py
tests/: slackapi_test.py
tests/infra/slack/: test_client.py
tests/infra/usecases/alerts/: test_send.py  test_slack_alert.py
