[tool.poetry]
name = "alerts"
version = "0.1.0"
description = ""
authors = ["oal100484 <ana.lopes@open-co.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
flake8 = "^6.0.0"
pylint = "^2.15.10"
pre-commit = "^2.21.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
